--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "classnames": "^2.5.1",
+    "firebase": "^10.12.2",
     "flowbite": "^2.3.0",
+    "noty": "^3.2.0-beta-deprecated",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
