--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^10.12.2",
     "flowbite": "^2.3.0",
     "js-base64": "^3.7.7",
+    "moment": "^2.30.1",
     "noty": "^3.2.0-beta-deprecated",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
